# ez_newsletter

./: README.md  create_markdown.py  get_page_content.py  get_search_results.py  meetup.md  pyproject.toml  test.rtf
archive/: marc_bolan.json
articles/: Marc_Bolan_The_Stoke_Newington_Legend.md  Marc_Bolan__Londons_First-Glam-Rock_Star.md  arc_Bolan_The_Glam_Rock_Star_of_Stoke_Newington.md  marc_bolan_londons_first_glam_rocker.md
links_search/: marc_bolan.json  t_rex.json
search/: marc_bolan.json  t_rex.json
text_snippets/: marc_bolan.json_Stoke Newington_http___knowledgeoflondon_com_marcbolan_html.json  marc_bolan.json_Stoke Newington_http___monkey-picks_blogspot_com_2012_12_stamford-hill-mods-genesis-of-marc_html.json  marc_bolan.json_Stoke Newington_http___www_londonshoes_blog_2017_07_10_marc-bolans-london-from-cradle-to-grave_.json  marc_bolan.json_Stoke Newington_http___www_stokenewingtonliteraryfestival_com_about_.json  marc_bolan.json_Stoke Newington_https___blackcablondon_net_tag_stoke-newington_.json  marc_bolan.json_Stoke Newington_https___commons_wikimedia_org_wiki_File_Marc_bolan_plaque_jpg.json  marc_bolan.json_Stoke Newington_https___commons_wikimedia_org_wiki_File_Mark_Feld_later_known_as_Marc_Bolan_musician_lived_here_1947-1962_jpg.json  marc_bolan.json_Stoke Newington_https___duckie_co_uk_events_saturday-16-september.json  marc_bolan.json_Stoke Newington_https___en_wikipedia_org_wiki_Stoke_Newington_Common.json  marc_bolan.json_Stoke Newington_https___hidden-london_com_gazetteer_stoke-newington_.json  (+101 more)
